--- a/notifications-app/client/package.json
+++ b/notifications-app/client/package.json
@@ -13,8 +13,9 @@
     "graphql-tag": "^2.8.0",
     "lodash.debounce": "^4.0.8",
     "react": "^16.2.0",
-    "react-apollo": "^2.1.1",
+    "react-apollo": "^2.1.1yarn ",
     "react-dom": "^16.2.0",
+    "react-notification-system": "^0.2.17",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "subscriptions-transport-ws": "^0.9.6"
