--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,6 +13,7 @@
     "apollo-link-http": "^1.5.16",
     "apollo-link-ws": "^1.0.19",
     "apollo-utilities": "^1.3.3",
+    "faker": "^4.1.0",
     "graphql-tag": "^2.10.3",
     "query-string": "^6.12.0",
     "react": "^16.13.1",
