--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.11.1",
     "faker": "^4.1.0",
     "graphql-tag": "^2.10.3",
+    "js-base64": "^2.5.2",
     "query-string": "^6.12.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.4",
